force-app/main/default/objects/ResourceForecast__c/ResourceForecast__c.object-meta.xml
<CustomObject>
    <label>Resource Forecast</label>
    <nameField>
        <displayFormat>RF-{000000}</displayFormat>
        <label>Resource Forecast Nr.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Resource Forecasts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>