force-app/main/default/objects/ResourceForecast__c/fields/DateFirstDayOfMonth__c.field-meta.xml
<CustomField>
    <fullName>DateFirstDayOfMonth__c</fullName>
    <label>Date (First Day of Month)</label>
    <type>Date</type>
</CustomField>