force-app/main/default/objects/ResourceForecast__c/fields/ExpectedDays__c.field-meta.xml
<CustomField>
    <fullName>ExpectedDays__c</fullName>
    <label>Expected Days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>