force-app/main/default/objects/ResourceForecast__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <inlineHelpText>Resource Forecast records are automatically created from the opportunity. Change relevant field values on the opportunity in the project information section.</inlineHelpText>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Resource Forecasts</relationshipLabel>
    <relationshipName>ResourceForecasts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>